--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -218,11 +218,11 @@ set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.227.215.50;
 set_real_ip_from 176.58.100.98;
-set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.97.114.182;
 set_real_ip_from 176.97.114.202;
 set_real_ip_from 177.149.133.56;
+set_real_ip_from 178.162.201.169;
 set_real_ip_from 178.17.170.144;
 set_real_ip_from 178.17.170.23;
 set_real_ip_from 178.17.171.102;
@@ -299,7 +299,6 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
-set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
@@ -339,7 +338,18 @@ set_real_ip_from 185.220.100.255;
 set_real_ip_from 185.220.101.0;
 set_real_ip_from 185.220.101.1;
 set_real_ip_from 185.220.101.10;
+set_real_ip_from 185.220.101.100;
+set_real_ip_from 185.220.101.101;
+set_real_ip_from 185.220.101.102;
+set_real_ip_from 185.220.101.103;
+set_real_ip_from 185.220.101.104;
+set_real_ip_from 185.220.101.105;
+set_real_ip_from 185.220.101.106;
+set_real_ip_from 185.220.101.107;
+set_real_ip_from 185.220.101.108;
+set_real_ip_from 185.220.101.109;
 set_real_ip_from 185.220.101.11;
+set_real_ip_from 185.220.101.110;
 set_real_ip_from 185.220.101.12;
 set_real_ip_from 185.220.101.128;
 set_real_ip_from 185.220.101.129;
@@ -486,12 +496,17 @@ set_real_ip_from 185.220.101.88;
 set_real_ip_from 185.220.101.89;
 set_real_ip_from 185.220.101.9;
 set_real_ip_from 185.220.101.90;
+set_real_ip_from 185.220.101.96;
+set_real_ip_from 185.220.101.97;
+set_real_ip_from 185.220.101.98;
+set_real_ip_from 185.220.101.99;
 set_real_ip_from 185.220.103.4;
 set_real_ip_from 185.220.103.5;
 set_real_ip_from 185.220.103.6;
 set_real_ip_from 185.220.103.7;
 set_real_ip_from 185.220.103.8;
 set_real_ip_from 185.220.103.9;
+set_real_ip_from 185.225.226.182;
 set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
@@ -702,6 +717,7 @@ set_real_ip_from 2001:1b60:3:221:4134:101:0:1;
 set_real_ip_from 2001:1b60:3:221:701:102:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:103:0:1;
 set_real_ip_from 2001:1b60:3:239:1003:106:0:1;
+set_real_ip_from 200.122.181.2;
 set_real_ip_from 2001:40e8:0:f090::100;
 set_real_ip_from 2001:41d0:1008:20d1::1;
 set_real_ip_from 2001:41d0:2:9161::1;
@@ -1041,6 +1057,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.4;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.13;
 set_real_ip_from 23.94.211.25;
 set_real_ip_from 2400:8901::f03c:93ff:fe68:23b3;
@@ -1068,6 +1085,7 @@ set_real_ip_from 2600:3c03::f03c:95ff:fe5d:562;
 set_real_ip_from 2600:3c0a::f03c:95ff:fe5d:a877;
 set_real_ip_from 2602:2da:0:33:5054:ff:fe6c:39dc;
 set_real_ip_from 2602:2da:0:34:5054:ff:fe7e:7c21;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:4::;
 set_real_ip_from 2602:fc24:12:81a6::1;
 set_real_ip_from 2602:fc24:12:a679::1;
@@ -1363,7 +1381,6 @@ set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
-set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
@@ -1629,6 +1646,21 @@ set_real_ip_from 2a0b:f4c2:3::88;
 set_real_ip_from 2a0b:f4c2:3::89;
 set_real_ip_from 2a0b:f4c2:3::90;
 set_real_ip_from 2a0b:f4c2::4;
+set_real_ip_from 2a0b:f4c2:4::100;
+set_real_ip_from 2a0b:f4c2:4::101;
+set_real_ip_from 2a0b:f4c2:4::102;
+set_real_ip_from 2a0b:f4c2:4::103;
+set_real_ip_from 2a0b:f4c2:4::104;
+set_real_ip_from 2a0b:f4c2:4::105;
+set_real_ip_from 2a0b:f4c2:4::106;
+set_real_ip_from 2a0b:f4c2:4::107;
+set_real_ip_from 2a0b:f4c2:4::108;
+set_real_ip_from 2a0b:f4c2:4::109;
+set_real_ip_from 2a0b:f4c2:4::110;
+set_real_ip_from 2a0b:f4c2:4::96;
+set_real_ip_from 2a0b:f4c2:4::97;
+set_real_ip_from 2a0b:f4c2:4::98;
+set_real_ip_from 2a0b:f4c2:4::99;
 set_real_ip_from 2a0b:f4c2::5;
 set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
@@ -1725,7 +1757,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
-set_real_ip_from 45.129.84.247;
+set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
@@ -1792,7 +1824,6 @@ set_real_ip_from 45.95.169.227;
 set_real_ip_from 45.95.169.228;
 set_real_ip_from 45.95.169.229;
 set_real_ip_from 45.95.169.255;
-set_real_ip_from 45.95.202.48;
 set_real_ip_from 46.165.243.36;
 set_real_ip_from 46.182.21.248;
 set_real_ip_from 46.232.251.191;
