--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -150,7 +150,6 @@ allow 146.59.35.38;
 allow 146.70.164.211;
 allow 147.45.116.145;
 allow 147.45.78.34;
-allow 147.78.67.73;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -160,6 +159,7 @@ allow 151.80.148.159;
 allow 15.204.224.241;
 allow 15.204.238.148;
 allow 154.16.116.61;
+allow 154.213.184.105;
 allow 154.213.184.42;
 allow 154.213.184.5;
 allow 154.213.185.133;
@@ -218,6 +218,7 @@ allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.227.215.50;
 allow 176.58.100.98;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
@@ -299,6 +300,7 @@ allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
+allow 185.165.169.42;
 allow 185.170.114.25;
 allow 185.183.157.214;
 allow 185.183.159.40;
@@ -1381,6 +1383,7 @@ allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -1732,6 +1735,7 @@ allow 2a12:a800:2:1:45:141:215:116;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::2;
+allow 2a12:dd47:8513::3;
 allow 2a13:d207:0:461::1;
 allow 31.129.22.65;
 allow 31.133.0.210;
@@ -1757,6 +1761,7 @@ allow 45.118.133.44;
 allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
+allow 45.129.84.247;
 allow 45.129.84.248;
 allow 45.129.84.249;
 allow 45.132.246.245;
@@ -1893,6 +1898,7 @@ allow 5.45.104.176;
 allow 5.45.98.162;
 allow 62.133.45.2;
 allow 62.171.137.169;
+allow 62.182.83.179;
 allow 62.182.84.146;
 allow 64.227.115.78;
 allow 66.146.193.33;
@@ -1940,7 +1946,6 @@ allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
-allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.252.120.163;
 allow 85.17.9.83;
@@ -1991,6 +1996,7 @@ allow 91.219.237.56;
 allow 91.219.239.166;
 allow 91.92.109.126;
 allow 91.92.109.43;
+allow 92.223.2.183;
 allow 92.243.24.163;
 allow 92.246.138.145;
 allow 92.246.84.133;
