--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -430,6 +430,7 @@ allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -781,4 +782,5 @@ allow 2a12:a800:2:1:45:141:215:116;
 allow 2a12:bec4:11d3:de9f::1;
 allow 2a12:d8c0:109a:9001::7;
 allow 2a12:dd47:8513::2;
+allow 2a12:dd47:8513::3;
 allow 2a13:d207:0:461::1;
