--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -150,7 +150,6 @@ set_real_ip_from 146.59.35.38;
 set_real_ip_from 146.70.164.211;
 set_real_ip_from 147.45.116.145;
 set_real_ip_from 147.45.78.34;
-set_real_ip_from 147.78.67.73;
 set_real_ip_from 148.113.152.91;
 set_real_ip_from 149.202.79.101;
 set_real_ip_from 149.202.79.129;
@@ -160,6 +159,7 @@ set_real_ip_from 151.80.148.159;
 set_real_ip_from 15.204.224.241;
 set_real_ip_from 15.204.238.148;
 set_real_ip_from 154.16.116.61;
+set_real_ip_from 154.213.184.105;
 set_real_ip_from 154.213.184.42;
 set_real_ip_from 154.213.184.5;
 set_real_ip_from 154.213.185.133;
@@ -218,6 +218,7 @@ set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.227.215.50;
 set_real_ip_from 176.58.100.98;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.97.114.182;
 set_real_ip_from 176.97.114.202;
@@ -299,6 +300,7 @@ set_real_ip_from 185.153.197.227;
 set_real_ip_from 185.154.110.142;
 set_real_ip_from 185.154.110.17;
 set_real_ip_from 185.165.169.239;
+set_real_ip_from 185.165.169.42;
 set_real_ip_from 185.170.114.25;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
@@ -1381,6 +1383,7 @@ set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
@@ -1732,6 +1735,7 @@ set_real_ip_from 2a12:a800:2:1:45:141:215:116;
 set_real_ip_from 2a12:bec4:11d3:de9f::1;
 set_real_ip_from 2a12:d8c0:109a:9001::7;
 set_real_ip_from 2a12:dd47:8513::2;
+set_real_ip_from 2a12:dd47:8513::3;
 set_real_ip_from 2a13:d207:0:461::1;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.133.0.210;
@@ -1757,6 +1761,7 @@ set_real_ip_from 45.118.133.44;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.133.242;
 set_real_ip_from 45.129.84.246;
+set_real_ip_from 45.129.84.247;
 set_real_ip_from 45.129.84.248;
 set_real_ip_from 45.129.84.249;
 set_real_ip_from 45.132.246.245;
@@ -1893,6 +1898,7 @@ set_real_ip_from 5.45.104.176;
 set_real_ip_from 5.45.98.162;
 set_real_ip_from 62.133.45.2;
 set_real_ip_from 62.171.137.169;
+set_real_ip_from 62.182.83.179;
 set_real_ip_from 62.182.84.146;
 set_real_ip_from 64.227.115.78;
 set_real_ip_from 66.146.193.33;
@@ -1940,7 +1946,6 @@ set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
-set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
 set_real_ip_from 84.252.120.163;
 set_real_ip_from 85.17.9.83;
@@ -1991,6 +1996,7 @@ set_real_ip_from 91.219.237.56;
 set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
+set_real_ip_from 92.223.2.183;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.138.145;
 set_real_ip_from 92.246.84.133;
