--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -129,6 +129,7 @@ allow 128.127.180.156;
 allow 128.31.0.13;
 allow 130.193.10.21;
 allow 130.193.15.186;
+allow 130.193.15.79;
 allow 136.244.111.163;
 allow 137.184.197.55;
 allow 138.59.18.110;
@@ -223,6 +224,7 @@ allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.227.215.50;
 allow 176.58.100.98;
+allow 176.58.121.177;
 allow 176.58.89.182;
 allow 176.97.114.182;
 allow 176.97.114.202;
@@ -1383,6 +1385,7 @@ allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
+allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a02:16d0:0:5::1;
 allow 2a02:2970:1001::4b;
 allow 2a02:418:6017::147;
@@ -1846,7 +1849,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
-allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -2007,6 +2009,7 @@ allow 94.142.241.194;
 allow 94.142.244.16;
 allow 94.16.115.121;
 allow 94.16.116.81;
+allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.177.106.247;
 allow 94.177.106.54;
