--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -428,6 +428,7 @@ deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
 deny 2a01:6340:2:501::10;
 deny 2a01:7e00::f03c:91ff:fe56:2656;
+deny 2a01:7e00::f03c:91ff:fe78:b382;
 deny 2a02:16d0:0:5::1;
 deny 2a02:2970:1001::4b;
 deny 2a02:418:6017::147;
