--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -129,6 +129,7 @@ set_real_ip_from 128.127.180.156;
 set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.10.21;
 set_real_ip_from 130.193.15.186;
+set_real_ip_from 130.193.15.79;
 set_real_ip_from 136.244.111.163;
 set_real_ip_from 137.184.197.55;
 set_real_ip_from 138.59.18.110;
@@ -223,6 +224,7 @@ set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.227.215.50;
 set_real_ip_from 176.58.100.98;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 176.97.114.182;
 set_real_ip_from 176.97.114.202;
@@ -1383,6 +1385,7 @@ set_real_ip_from 2a01:5e0:36:c311::1;
 set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a02:16d0:0:5::1;
 set_real_ip_from 2a02:2970:1001::4b;
 set_real_ip_from 2a02:418:6017::147;
@@ -1846,7 +1849,6 @@ set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
 set_real_ip_from 5.255.100.219;
 set_real_ip_from 5.255.100.227;
-set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.104.202;
 set_real_ip_from 5.255.111.64;
@@ -2007,6 +2009,7 @@ set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
 set_real_ip_from 94.16.115.121;
 set_real_ip_from 94.16.116.81;
+set_real_ip_from 94.16.116.86;
 set_real_ip_from 94.16.121.91;
 set_real_ip_from 94.177.106.247;
 set_real_ip_from 94.177.106.54;
