--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -1,4 +1,3 @@
-deny 2001:19f0:5401:266f:5400:4ff:feb9:e92b;
 deny 2001:19f0:5:6dcc:5400:4ff:fefc:9cc;
 deny 2001:1af8:4060:a01f::12a6;
 deny 2001:1af8:4700:a114:6::1;
@@ -145,7 +144,6 @@ deny 2602:fccf:310:1::a;
 deny 2602:fccf:310:1::b;
 deny 2602:fccf:310:1::c;
 deny 2602:fef9:100:1100::199;
-deny 2603:c024:c001:207e:2b71:7031:c7c7:abec;
 deny 2604:2dc0:101:200::162b;
 deny 2604:2dc0:101:200::1dd3;
 deny 2604:2dc0:202:300::ed3;
@@ -701,6 +699,7 @@ deny 2a0b:f4c2::6;
 deny 2a0b:f4c2::7;
 deny 2a0b:f4c2::8;
 deny 2a0b:f4c2::9;
+deny 2a0c:5cc0:1:1::293c:1518;
 deny 2a0c:e300::23;
 deny 2a0d:8140:1fff:34cd::1;
 deny 2a0d:bbc7:0:1::254;
@@ -726,7 +725,6 @@ deny 2a0e:fa00:0:1b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:93c1:26:1f2::9ce5;
 deny 2a0f:9400:7e11:89c::1;
-deny 2a0f:9400:7e11:8ba1::1;
 deny 2a0f:ca80:0:e57f::82e1:3f1b;
 deny 2a0f:df00:0:255::194;
 deny 2a0f:df00:0:255::195;
@@ -771,4 +769,5 @@ deny 2a12:dd47:8513::4;
 deny 2a12:dd47:8513::5;
 deny 2a12:dd47:8513::6;
 deny 2a12:dd47:8513::7;
+deny 2a12:dd47:8513::8;
 deny 2a13:d207:0:461::1;
