--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -133,6 +133,7 @@ allow 130.193.15.79;
 allow 136.244.111.163;
 allow 137.184.197.55;
 allow 138.59.18.110;
+allow 139.162.249.209;
 allow 139.99.172.11;
 allow 139.99.8.57;
 allow 141.98.11.62;
@@ -543,7 +544,6 @@ allow 185.246.189.130;
 allow 185.246.189.77;
 allow 185.246.189.99;
 allow 185.246.86.197;
-allow 185.247.184.105;
 allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
@@ -730,7 +730,6 @@ allow 2001:1b60:3:221:4134:101:0:1;
 allow 2001:1b60:3:221:701:102:0:1;
 allow 2001:1b60:3:239:1003:103:0:1;
 allow 2001:1b60:3:239:1003:106:0:1;
-allow 200.122.181.2;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:1008:20d1::1;
 allow 2001:41d0:2:9161::1;
@@ -1373,6 +1372,7 @@ allow 2620:7:6001::ffff:c759:e659;
 allow 2620:95:4007::111;
 allow 27.255.75.198;
 allow 2800:ba0:6:c1::4858;
+allow 2a00:16b0:1:243::7012:e817;
 allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:12c::4d3a;
@@ -1455,11 +1455,9 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
-allow 2a05:541:110:3e::1;
 allow 2a05:541:112:31::1;
 allow 2a05:541:121:33::1;
 allow 2a05:541:122:49::1;
-allow 2a05:541:141:2c::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6949::1;
@@ -1666,6 +1664,7 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:5cc0:1:1::293c:1518;
 allow 2a0c:e300::23;
 allow 2a0d:8140:1fff:34cd::1;
 allow 2a0d:bbc7:0:1::254;
@@ -1762,6 +1761,7 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.129.84.246;
 allow 45.129.84.247;
+allow 45.129.84.248;
 allow 45.129.84.249;
 allow 45.132.246.245;
 allow 45.134.225.36;
@@ -1857,6 +1857,7 @@ allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.255.100.219;
 allow 5.255.100.227;
+allow 5.255.100.26;
 allow 5.255.103.235;
 allow 5.255.104.202;
 allow 5.255.111.64;
@@ -1925,7 +1926,6 @@ allow 77.48.28.236;
 allow 77.48.28.237;
 allow 77.48.28.239;
 allow 77.81.247.72;
-allow 77.83.246.112;
 allow 77.91.85.147;
 allow 77.91.86.95;
 allow 77.91.87.79;
@@ -1951,6 +1951,7 @@ allow 84.16.224.227;
 allow 84.239.46.144;
 allow 84.252.120.163;
 allow 85.17.9.83;
+allow 85.239.41.130;
 allow 85.93.218.204;
 allow 86.205.5.107;
 allow 87.118.110.27;
@@ -1960,6 +1961,8 @@ allow 87.118.116.90;
 allow 87.118.122.30;
 allow 87.118.122.51;
 allow 88.80.20.86;
+allow 88.80.26.2;
+allow 88.80.26.3;
 allow 88.99.249.117;
 allow 89.147.108.90;
 allow 89.147.110.118;
@@ -2018,7 +2021,6 @@ allow 94.142.244.16;
 allow 94.143.231.53;
 allow 94.16.115.121;
 allow 94.16.116.81;
-allow 94.16.116.86;
 allow 94.16.121.91;
 allow 94.177.106.247;
 allow 94.177.106.54;
